--- a/main.css
+++ b/main.css
@@ -74,7 +74,7 @@ img {
 /* Hero */
 .hero {
     position: relative;
-    height: 100vh;
+    min-height: 100vh;
     overflow: hidden;
     display: flex;
     flex-direction: column;
